# ltp

./: CMakeLists.txt  feature_debug.sh  predict.sh  predict2.sh
data/: 2.txt  exp.txt  input2.txt  jigou.txt  nation.txt
data/input/: 0.txt  1.txt  1001.txt  1002.txt  1004.txt  1005.txt  1009.txt  101.txt  1013.txt  1015.txt  1018.txt  1019.txt  1022.txt  1023.txt  1028.txt  103.txt  1037.txt  1038.txt  1039.txt  104.txt  1047.txt  1048.txt  1049.txt  105.txt  1050.txt  1051.txt  1052.txt  1054.txt  1057.txt  1065.txt  107.txt  1070.txt  1073.txt  1077.txt  1078.txt  108.txt  1080.txt  1081.txt  1082.txt  1086.txt  (+1567 more)
data/xml/: output.xml
examples/: CMakeLists.txt  Makefile  compare.cpp  genfeature.cpp  genfeature.h  predictor.cpp  predictor.h  tinyxml2.h
svm/: classify.py  fold.sh  learn.py  my_classify.py
svm/raw_data/: YR-sina-wrong-NER.txt  sina_sen_neg.txt  sina_sen_neg1.txt  sina_sen_pos.txt  test.txt  uslessless_relation_pos_long.txt
svm/svm-light-TK-1.2.1/: my_svm_classify.c  svm_classify.c  svm_common.c
svm/tmp_data/: feature.txt  output.txt  raw_data.txt  tmp.txt
